# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  pyproject.toml
page_analyzer/: __init__.py  app.py  database.sql  db.py  handlers.py  utils.py
page_analyzer/templates/: header_footer_template.html  index.html  url.html  url_checks.html  url_id.html  urls.html
