[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer by farguz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "gunicorn>=24.1.1",
    "lxml>=6.0.2",
    "psycopg-pool[binary]>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
